--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mutualinfobio
 Type: Package
 Title: Mutual Information calculator
-Version: 0.1.0
+Version: 0.1.0a
 Author: Luis Cantu
 Maintainer: Luis Cantu <luis_cantu@berkeley.edu>
 Description: This package contains a set of tools to calculate Mutual Information between proteins aminoacids from FASTA alignments.
